# tt_backend

./: pyproject.toml
app/: config.py  main.py
app/api/: __init__.py  healthcheck.py  tickers.py
app/db/: __init__.py  models.py  queries.py
app/schemas/: __init__.py  rates.py  tickers.py
deploy/docker/: Dockerfile  Worker.Dockerfile  docker-compose.yml
deploy/entrypoints/: start_app.sh  start_worker.sh
migrations/: env.py
migrations/versions/: 49a6feee106e_init.py
worker/: main.py
