[tool.poetry]
name = "tt_backend"
version = "1.0"
description = ""
authors = ["NeoIsALie"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
SQLAlchemy = "^1.4.35"
databases = "^0.5.5"
aiosqlite = "^0.17.0"
alembic = "^1.7.7"
psycopg2-binary = "^2.9.3"
asyncpg = "^0.25.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-mock = "^3.7.0"
add-trailing-comma = "^2.2.2"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.942"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
